--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.5.7",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.11",
     "react": "^19",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19",
